--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="stylesheet" href="CSS/estilo.css">
+  <link rel="stylesheet" href="CSS/home.css">
   <!-- Bootstrap CSS v5.2.0-beta1 -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
     integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
@@ -17,12 +17,12 @@
   <div id="principal">
         <header class=" container-fluid">
     <!--inicio header-->
-    <nav class="navbar navbar-expand-lg navbar-light id=" navegação-cadastro">
+    <nav class="navbar navbar-expand-lg navbar-light" id=" navegação-cadastro">
       <!--inicio do navbar -->
       <a class="navbar-brand " href="index.html"><img src="img/badge-vr.svg" alt="" width="60" height="40"></a>
       <button class="navbar-toggler  btn-group-lg  mr-4" type="button" data-toggle="collapse" data-target="#navbar"
         aria-controls="navbar">
-        <span class="navbar-toggler-icon"></span>
+        <span class="navbar-toggler-icon" ></span>
       </button>
       <div class="collapse navbar-collapse" id="nave-cadastro">
         <ul class=" navbar-nav">
@@ -36,7 +36,7 @@
             <a class="nav-link " href="contato.html">Contato</a>
           </li>
           <li class="nav-item ">
-            <a class="nav-link " href="login.html">Cadastro</a>
+            <a class="nav-link " href="index.html">Cadastro</a>
           </li>
         </ul>
         <form class="d-flex">
