--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html lang="en">
 
 <head>
-  <link rel="stylesheet" href="/CSS/estilologin.css"/>
+  <link rel="stylesheet" href="/CSS/login.css"/>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="./script/script.js"></script>
   <title>Login</title>
 </head>
 
@@ -23,19 +24,19 @@
                   <form>
                     <div class="form-group mx-sm-2">
                       <label for="inputEmail">Email</label>
-                      <input type="email" class="form-control " id="inputEmail " placeholder="Email" required="">
+                      <input class="email" value="" type="email" class="form-control " id="email" placeholder="Email">
                     </div>
                     <div class="informacoesSenha">
                       <div class="form-group mx-sm-0">
-                        <label for="inputPassword">Senha</label>
-                        <input type="password" class="form-control" id="inputPassword" placeholder="Senha" required>
+                        <label  for="inputPassword">Senha</label>
+                        <input class="senha" value="" type="password" class="form-control" id="password" placeholder="Senha">
                       </div>
                       <div class="form-check">
                         <input class="form-check input" type="checkbox" id="inlineFormCheck">
                         <label class="form-check-label" for="inlineFormCheck">Lembrar de mim
                         </label>
                       </div>
-                      <div class="botao-login" id="demo" onclick="">
+                      <div class="botao-login" id="demo"  onclick="clicar()">
                         <button type="submit" class="btn-success btn-lg ">Login<a href="home.html"></a></button>
                       </div>
                       <span class="icon">
@@ -124,7 +125,7 @@
                   </label>
                 </div>
               </div>
-              <button type="submit" class="btn btn-primary">Confirmar<a href="home.html""></a></button>
+              <button type="submit" class="btn btn-primary">Confirmar</button>
                             </form>
                         </div><!--fim do formulario do model-->
                       </div><!--fim do modal -->
