--- a/promocao.html
+++ b/promocao.html
@@ -6,7 +6,7 @@
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="stylesheet" href="CSS/estilo4.css">
+  <link rel="stylesheet" href="/CSS/promocao.css">
   <!-- Bootstrap CSS v5.2.0-beta1 -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
     integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
@@ -14,12 +14,11 @@
 </head>
 
 <body id="fundo">
-  <div id="principal">
-    <header class="container">
+  <header id="principal">
       <!--inicio header-->
-      <nav class="navbar navbar-expand-lg navbar-light id=" navegação-cadastro">
+    <nav class="navbar navbar-expand-lg navbar-light" id="navegação-cadastro">
         <!--inicio do navbar -->
-        <a class="navbar-brand " href="index.html"><img src="img/badge-vr.svg" alt="" width="60" height="40"></a>
+        <a class="navbar-brand " href="home.html"><img src="img/badge-vr.svg" alt="" width="60" height="40"></a>
         <button class="navbar-toggler  btn-group-lg  mr-4" type="button" data-toggle="collapse" data-target="#navbar"
           aria-controls="navbar">
           <span class="navbar-toggler-icon"></span>
@@ -45,8 +44,7 @@
           </form>
         </div>
       </nav>
-    </header>
-  </div>
+  </header>
   <main>
     <div class="tourism-container">
       <div class="tourism-details">
