update the pages to leave default

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
 
-    <div class="part1">
+    <main class="part1">
       <!--parte1 inicio-->
               <!--inicio do login-->
               <section class="cadastro ">
