--- a/home.html
+++ b/home.html
@@ -17,10 +17,10 @@
   <div id="principal">
         <header class=" container-fluid">
     <!--inicio header-->
-    <nav class="navbar navbar-expand-lg navbar-light" id=" navegação-cadastro">
+    <nav class="navbar navbar-expand-xl navbar-light" id=" navegação-cadastro">
       <!--inicio do navbar -->
       <a class="navbar-brand " href="index.html"><img src="img/badge-vr.svg" alt="" width="60" height="40"></a>
-      <button class="navbar-toggler  btn-group-lg  mr-4" type="button" data-toggle="collapse" data-target="#navbar"
+      <button class="navbar-toggler  btn-group-lg  mr-4" type="button" data-toggle="collapse" data-target="#navbar" id="navbarToggleExternalContent"
         aria-controls="navbar">
         <span class="navbar-toggler-icon" ></span>
       </button>
