--- a/promocao.html
+++ b/promocao.html
@@ -14,9 +14,10 @@
 </head>
 
 <body id="fundo">
-  <header id="principal">
+  <div id="principal">
+    <header class=" container-fluid">
       <!--inicio header-->
-    <nav class="navbar navbar-expand-lg navbar-light" id="navegação-cadastro">
+    <nav class="navbar navbar-expand-xl navbar-light" id="navegação-cadastro">
         <!--inicio do navbar -->
         <a class="navbar-brand " href="home.html"><img src="img/badge-vr.svg" alt="" width="60" height="40"></a>
         <button class="navbar-toggler  btn-group-lg  mr-4" type="button" data-toggle="collapse" data-target="#navbar"
@@ -42,9 +43,10 @@
             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
             <button class="btn btn-outline-success" type="submit">Search</button>
           </form>
+        </header>
         </div>
       </nav>
-  </header>
+  </div>
   <main>
     <div class="tourism-container">
       <div class="tourism-details">
