--- a/home.html
+++ b/home.html
@@ -17,34 +17,34 @@
   <div id="principal">
         <header class=" container-fluid">
     <!--inicio header-->
-    <nav class="navbar navbar-expand-xl navbar-light" id=" navegação-cadastro">
+    <nav class="navbar navbar-expand-lg navbar-light bg-successo" id="navegacao-cadastro">
       <!--inicio do navbar -->
-      <a class="navbar-brand " href="index.html"><img src="img/badge-vr.svg" alt="" width="60" height="40"></a>
-      <button class="navbar-toggler  btn-group-lg  mr-4" type="button" data-toggle="collapse" data-target="#navbar" id="navbarToggleExternalContent"
-        aria-controls="navbar">
-        <span class="navbar-toggler-icon" ></span>
-      </button>
-      <div class="collapse navbar-collapse" id="nave-cadastro">
-        <ul class=" navbar-nav">
-          <li class="nav-item active">
-            <a class="nav-link " href="index.html">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link  " href="promocao.html">Promoção</a>
-          </li>
-          <li class="nav-item ">
-            <a class="nav-link " href="contato.html">Contato</a>
-          </li>
-          <li class="nav-item ">
-            <a class="nav-link " href="index.html">Cadastro</a>
-          </li>
-        </ul>
-        <form class="d-flex">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
-        </form>
-      </div>
-    </nav>
+       <a class="navbar-brand" href="index.html"><img src="img/badge-vr.svg" alt="" width="60" height="40"></a>
+       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#conteudoNavbarSuportado" aria-controls="conteudoNavbarSuportado" aria-expanded="false" aria-label="Alterna navegação">
+         <span class="navbar-toggler-icon"></span>
+       </button>
+     
+       <div class="collapse navbar-collapse" id="conteudoNavbarSuportado">
+         <ul class=" navbar-nav">
+           <li class="nav-item active">
+             <a class="nav-link " href="index.html">Home</a>
+           </li>
+           <li class="nav-item">
+             <a class="nav-link  " href="promocao.html">Promoção</a>
+           </li>
+           <li class="nav-item ">
+             <a class="nav-link " href="contato.html">Contato</a>
+           </li>
+           <li class="nav-item ">
+             <a class="nav-link " href="index.html">Cadastro</a>
+           </li>
+         </ul>
+         <form class="d-flex">
+           <input class="form-control me-2" type="search" placeholder="pesquisar" aria-label="Pesquisar">
+           <button class="btn btn-outline-success" type="submit">Pesquisar</button>
+         </form>
+       </div>
+     </nav>
     <!--fim do navbar -->
     <div class="container">
       <div class="titulo-header">
