--- a/promocao.html
+++ b/promocao.html
@@ -17,35 +17,34 @@
   <div id="principal">
     <header class=" container-fluid">
       <!--inicio header-->
-    <nav class="navbar navbar-expand-xl navbar-light" id="navegação-cadastro">
+      <nav class="navbar navbar-expand-lg navbar-light bg-successo" id="navegacao-cadastro">
         <!--inicio do navbar -->
-        <a class="navbar-brand " href="home.html"><img src="img/badge-vr.svg" alt="" width="60" height="40"></a>
-        <button class="navbar-toggler  btn-group-lg  mr-4" type="button" data-toggle="collapse" data-target="#navbar"
-          aria-controls="navbar">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="nave-cadastro">
-          <ul class=" navbar-nav">
-            <li class="nav-item active">
-              <a class="nav-link " href="home.html">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link  " href="promocao.html">Promoção</a>
-            </li>
-            <li class="nav-item ">
-              <a class="nav-link " href="contato.html">Contato</a>
-            </li>
-            <li class="nav-item ">
-              <a class="nav-link " href="login.html">Cadastro</a>
-            </li>
-          </ul>
-          <form class="d-flex">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success" type="submit">Search</button>
-          </form>
-        </header>
-        </div>
-      </nav>
+         <a class="navbar-brand" href="index.html"><img src="img/badge-vr.svg" alt="" width="60" height="40"></a>
+         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#conteudoNavbarSuportado" aria-controls="conteudoNavbarSuportado" aria-expanded="false" aria-label="Alterna navegação">
+           <span class="navbar-toggler-icon"></span>
+         </button>
+       
+         <div class="collapse navbar-collapse" id="conteudoNavbarSuportado">
+           <ul class=" navbar-nav">
+             <li class="nav-item active">
+               <a class="nav-link " href="index.html">Home</a>
+             </li>
+             <li class="nav-item">
+               <a class="nav-link  " href="promocao.html">Promoção</a>
+             </li>
+             <li class="nav-item ">
+               <a class="nav-link " href="contato.html">Contato</a>
+             </li>
+             <li class="nav-item ">
+               <a class="nav-link " href="index.html">Cadastro</a>
+             </li>
+           </ul>
+           <form class="d-flex">
+             <input class="form-control me-2" type="search" placeholder="pesquisar" aria-label="Pesquisar">
+             <button class="btn btn-outline-success" type="submit">Pesquisar</button>
+           </form>
+         </div>
+       </nav>
   </div>
   <main>
     <div class="tourism-container">
@@ -134,5 +133,16 @@
     </div>
 
   </main>
+
+
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+  integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+  crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js"
+  integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+  crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js"
+  integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+  crossorigin="anonymous"></script>
 </body>
 </header>
